Bug 126032 - Last item in play queue is played twice
Summary: Last item in play queue is played twice
Status: RESOLVED FIXED
Alias: None
Product: juk
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Compiled Sources FreeBSD
: NOR normal
Target Milestone: ---
Assignee: Scott Wheeler
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2006-04-21 17:02 UTC by Philip Rodrigues
Modified: 2007-06-24 21:03 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Philip Rodrigues 2006-04-21 17:02:42 UTC
Version:            (using KDE Devel)
Installed from:    Compiled sources
OS:                FreeBSD

Another mini problem with the play queue: the last item is played twice.

To reproduce:
1. Right-click an item -> "Add to play queue"
2. Click on "Play"
3. Track is played twice

I thought it might have been because it's still selected in the collection list view (or wherever you right-clicked on it), but you can insert a step 2.5, "click on another track", and the behaviour remains the same.
Comment 1 Daniel Roberge 2006-11-05 11:16:13 UTC
I can reproduce this with 2.3.2 from Debian. Regardless of what I do, the last item in the queue is played twice.
Comment 2 Michael Pyne 2007-06-24 21:03:00 UTC
Fixed as of revision 679722.