Fix bug 126032 (Last item in play queue is played twice) in KDE 4.

BUG:126032

svn path=/trunk/KDE/kdemultimedia/juk/; revision=679722